  * uscan:
    + Document the USCAN_DESTDIR configuration variable (Closes: #460717)
    + uscan: Correctly set the default User-Agent header (Closes: #462770)
  * bts:
    + Fix downloading of named attachments (Closes: #460850)
    + Add support for setting X-Debbugs-No-Ack (Closes: #458973)
  * grep-excuses: Update wipnity functionality in line with the move of
    testing.pl to release.d.o
  * checkbashisms: Warn about the use of >& and &> (Closes: #461653)
  * deb-reversion: Support passing -b / --force-bad-version to dch
    (Closes: #461557)
  * mass-bug: Allow setting of tags. Thanks to Pierre Habouzit for the
    patch (Closes: #462649)
  * debcommit: Allow the commit message to be edited before passing it
    to the VCS. Thanks to Patrick Schoenfeld for the patch (Closes: #462758)
  * debuild: Pass -j through to dpkg-buildpackage (Closes: #461239)
  * tagpending: Use "bts select" instead of wget where possible
  * dget: Correctly parse arguments to --path (Closes: #460970)

  [ Mohammed Adnène Trojette ]
  * debcheckout: remove "-d" from Vcs-Cvs: field if a maintainer puts it.

  [ Christoph Berg ]
  * debcommit: also look for \t in the diff for GNU-style changelogs.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Mon, 28 Jan 2008 22:58:38 +0000

devscripts (2.10.13) unstable; urgency=low

  * The 'we sponsor Adam for DM' upload

  [ Mohammed Adnène Trojette ]
  * debcheckout: wrap error message. (Closes: #459372)

  [ Adam D. Barratt ]
  * grep-excuses:
    + Only check for the presence of libterm-size-perl if -w / --wipnity
      is being used.
    + Improve the error message when libterm-size-perl isn't installed.
  * debian/control: Add libterm-size-perl to the description of grep-excuses
    (Closes: #459586)
  * README: Add libterm-size-perl to the description of grep-excuses

  [ James Vega ]
  * tagpending: Handle new-style links to individual bug reports which are
    simply the bug-numer.