@@ -9,7 +9,13 @@ devscripts (2.10.14) UNRELEASED; urgency=low
     + Add support for setting X-Debbugs-No-Ack (Closes: #458973)
   * grep-excuses: Update wipnity functionality in line with the move of
     testing.pl to release.d.o
-  * checkbashisms: Warn about the use of >& and &> (Closes: #461653)
+  * checkbashisms:
+    + Warn about the use of >& and &> (Closes: #461653)
+    + Bring the script largely back in to sync with lintian's checks/scripts:
+      - don't check scripts that appear to be shell scripts but aren't (Closes: #463257)
+      - don't flag potential issues if they occur inside single quotes
+      - separate out those issues that should only be flagged if they occur inside quoted strings
+      - catch the use of kill -[0-9] or -[A-Z], trap with signal numbers and [[ foo ]]
   * deb-reversion: Support passing -b / --force-bad-version to dch
     (Closes: #461557)
   * mass-bug: Allow setting of tags. Thanks to Pierre Habouzit for the
@@ -26,7 +32,7 @@ devscripts (2.10.14) UNRELEASED; urgency=low
   [ Christoph Berg ]
   * debcommit: also look for \t in the diff for GNU-style changelogs.
 
- -- Adam D. Barratt <adam@adam-barratt.org.uk>  Mon, 28 Jan 2008 22:58:38 +0000
+ -- Adam D. Barratt <adam@adam-barratt.org.uk>  Thu, 31 Jan 2008 21:59:15 +0000
 
 devscripts (2.10.13) unstable; urgency=low
 
